fix overflow issue

--- a/src/content/scss/index.scss
+++ b/src/content/scss/index.scss
@@ -1,5 +1,6 @@
 body, #app {
   height: 100vh;
+  margin: 0;
   position: relative;
   width: 100vw;
 }
